Cambios de nombre en el menu

--- a/KJC_ProFitManager/MainWindow.xaml
+++ b/KJC_ProFitManager/MainWindow.xaml
@@ -10,7 +10,7 @@
         ResizeMode="NoResize"
         WindowStyle="None">
     <Grid>
-        <Label Content="Bienvenidos al Sistema de KJC-ProFitManager" HorizontalAlignment="Center" Margin="0,34,0,0" VerticalAlignment="Top" Height="38" Width="522" FontFamily="Arial Black" FontSize="20" RenderTransformOrigin="0.505,-0.451"/>
+        <Label Content="Bienvenidos al Sistema de KJC-SmartFit" HorizontalAlignment="Center" Margin="0,34,0,0" VerticalAlignment="Top" Height="38" Width="522" FontFamily="Arial Black" FontSize="20" RenderTransformOrigin="0.505,-0.451"/>
         <Label Content="&quot;Keep Joining Challenges&quot;" HorizontalAlignment="Center" Margin="0,77,0,0" VerticalAlignment="Top" Height="42" Width="236" FontFamily="Arial Narrow" FontSize="20"/>
         <Image HorizontalAlignment="Center" Height="230" Margin="0,124,0,0" VerticalAlignment="Top" Width="238" Source="/Van Damme.png" Stretch="UniformToFill"/>
         <Button x:Name="BtnIniciar" Content="¡INICIAR AHORA!" HorizontalAlignment="Center" Margin="0,367,0,0" VerticalAlignment="Top" Height="50" Width="522" FontFamily="Arial Black" FontSize="20" Background="#FF4A6CF1" Click="BtnIniciar_Click"/>
